# CodingChallenge

./: .gitignore
AdventOfCode/: AdventOfCode.cabal
AdventOfCode/app/: day10a.hs  day10b.hs  day11a.hs  day2a.hs  day3a.hs  day5b.hs  day6a.hs  day7a.hs  day8b.hs  day9b.hs
AdventOfCode/data/: day2.input
DemandingMoney/: money  money.c++  sample.in  sample.in.barely
GCJ2016/: starter.cpp
GCJ2016/BFFs/: 3-small.out  C-small-attempt0.in  C-small-attempt1.in  C-small-attempt2.in  bff  bff.cpp
GCJ2016/Factory/: D-large-practice.in  D-large-practice.out  D-small-practice.in  D-small-practice.out  Factory.c++  sample4.in
GCJ2016/Fractiles/: D-large.out  D-small-attempt0.in  D-small-attempt0.out  prog  prog.cpp  prog.cpp~
GCJ2016/RPS/: RPS.c++
GCJ2016/RanknFile/: 2-large.out  2-small.out  B-small-attempt0.in  rnf  rnf.cpp
GCJ2016/RedTape/: B-large-practice.out  B-small-practice.out  RedTape.c++  sample2.in
GCJ2016/TheLastWord/: 1-small.out  A-small-attempt0.in  lw  lw.cpp
GCJ2017/BathroomStalls/: large.in  large.out  small-1.in  small-1.out  small-2.in  small-2.out  solution.py
GCJ2017/FashionShow/: main.cpp
GCJ2017/StableNeighbours/: B-large-practice.out  B-small-practice.out  sample.in  solution.cpp
GCJ2018/GoGopher/: solution.cpp  testing_tool.py
GoogleDance/: GooglerDance.hs  README
HeronTriangle/: script.sh  scriptV2.sh
HeronTriangle/src/: HT-OPTIMIZED.hs
KingdomRush/: README  TD.hs
LongestPalindrome/: main.cpp  solution.cpp
MedianOfTwo/: main.cpp  solution.cpp
PalindromePairs/: inc.cpp  main.cpp  solution.cpp
ShortestPalindrome/: main.cpp  solution.cpp
SimpleDB/: Thumbstack.py
Triangle/syang/: HT-OPTIMIZED.hs  HT.hs  Makefile  processResult.py  result  script.sh  scriptV2.sh  tmp
Triangle/syang/src/: HT-OPTIMIZED.hs
aoc2017/: AdventOfCode.cabal
aoc2017/app/: day1a.hs  day1b.hs  day2b.hs  day3b.hs  day4a.hs  day4b.hs  day5a.hs  day6b.hs  day7b.hs  day8a.hs  day9a.hs
aoc2017/data/: day6.input
aoc2018/: day1.go  day2.go  main.go
